--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,60 +1,78 @@
 # 2024-03-21
 
-共 101 条
+共 112 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 07:00:37 GMT+0800 (China Standard Time) -->
-1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
-1. [原“天上人间”老板覃辉在美承认3宗罪](https://so.toutiao.com/search?keyword=原“天上人间”老板覃辉在美承认3宗罪)
+<!-- 最后更新时间 Thu Mar 21 2024 08:26:00 GMT+0800 (China Standard Time) -->
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
 1. [各地经济发展“春暖花开”朝气蓬勃](https://so.toutiao.com/search?keyword=各地经济发展“春暖花开”朝气蓬勃)
-1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
-1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
-1. [19岁网红“山东小钺钺”重伤](https://so.toutiao.com/search?keyword=19岁网红“山东小钺钺”重伤)
+1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
+1. [西媒：阿斯麦患上“荷兰病”](https://so.toutiao.com/search?keyword=西媒：阿斯麦患上“荷兰病”)
+1. [原“天上人间”老板覃辉在美承认3宗罪](https://so.toutiao.com/search?keyword=原“天上人间”老板覃辉在美承认3宗罪)
+1. [14个月大的宝宝在厨房内娴熟颠勺](https://so.toutiao.com/search?keyword=14个月大的宝宝在厨房内娴熟颠勺)
 1. [为何王树国校长离任如此受关注](https://so.toutiao.com/search?keyword=为何王树国校长离任如此受关注)
-1. [法国电视台公开讨论出兵乌克兰](https://so.toutiao.com/search?keyword=法国电视台公开讨论出兵乌克兰)
-1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
-1. [中国联通今年大幅下降资本开支](https://so.toutiao.com/search?keyword=中国联通今年大幅下降资本开支)
+1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
+1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
+1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
 1. [东航致132人遇难事故调查进展公布](https://so.toutiao.com/search?keyword=东航致132人遇难事故调查进展公布)
 1. [动画还原客车撞隧道致14死事故](https://so.toutiao.com/search?keyword=动画还原客车撞隧道致14死事故)
 1. [越共中央批准越南国家主席辞职](https://so.toutiao.com/search?keyword=越共中央批准越南国家主席辞职)
-1. [两所“985”大学会共享一位校长吗](https://so.toutiao.com/search?keyword=两所“985”大学会共享一位校长吗)
-1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
 1. [老师站板凳上教育高个子学生](https://so.toutiao.com/search?keyword=老师站板凳上教育高个子学生)
-1. [60岁老人炒菠菜未焯水致肾病恶化](https://so.toutiao.com/search?keyword=60岁老人炒菠菜未焯水致肾病恶化)
-1. [克宫回应普京是否即将访华](https://so.toutiao.com/search?keyword=克宫回应普京是否即将访华)
-1. [印媒称印军对华展示谁是印度洋老大](https://so.toutiao.com/search?keyword=印媒称印军对华展示谁是印度洋老大)
+1. [两所“985”大学会共享一位校长吗](https://so.toutiao.com/search?keyword=两所“985”大学会共享一位校长吗)
+1. [19岁网红“山东小钺钺”重伤](https://so.toutiao.com/search?keyword=19岁网红“山东小钺钺”重伤)
+1. [法国电视台公开讨论出兵乌克兰](https://so.toutiao.com/search?keyword=法国电视台公开讨论出兵乌克兰)
+1. [俄方：消灭乌境内法军“并非难事”](https://so.toutiao.com/search?keyword=俄方：消灭乌境内法军“并非难事”)
+1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
+1. [台湾媒体人：柯文哲被韩国瑜取代了](https://so.toutiao.com/search?keyword=台湾媒体人：柯文哲被韩国瑜取代了)
+1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
 1. [外籍人士：我们应借鉴中国经验](https://so.toutiao.com/search?keyword=外籍人士：我们应借鉴中国经验)
-1. [胡塞导弹首次击中以色列领土](https://so.toutiao.com/search?keyword=胡塞导弹首次击中以色列领土)
-1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
 1. [雷军：电动车只有特斯拉敢涨价](https://so.toutiao.com/search?keyword=雷军：电动车只有特斯拉敢涨价)
-1. [女子离婚时提交丈夫出轨照片被起诉](https://so.toutiao.com/search?keyword=女子离婚时提交丈夫出轨照片被起诉)
-1. [俄议员：若有三战在俄无法用iPhone](https://so.toutiao.com/search?keyword=俄议员：若有三战在俄无法用iPhone)
-1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
-1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
+1. [克宫回应普京是否即将访华](https://so.toutiao.com/search?keyword=克宫回应普京是否即将访华)
+1. [中国联通今年大幅下降资本开支](https://so.toutiao.com/search?keyword=中国联通今年大幅下降资本开支)
+1. [王传福和库克在上海见面](https://so.toutiao.com/search?keyword=王传福和库克在上海见面)
 1. [冯小刚回应病危移民等传闻](https://so.toutiao.com/search?keyword=冯小刚回应病危移民等传闻)
 1. [Kimi背后公司仅成立一年](https://so.toutiao.com/search?keyword=Kimi背后公司仅成立一年)
+1. [特朗普回应是否缴得起4.64亿保证金](https://so.toutiao.com/search?keyword=特朗普回应是否缴得起4.64亿保证金)
+1. [俄议员：若有三战在俄无法用iPhone](https://so.toutiao.com/search?keyword=俄议员：若有三战在俄无法用iPhone)
+1. [这群15岁少年被西安交大少年班录取](https://so.toutiao.com/search?keyword=这群15岁少年被西安交大少年班录取)
+1. [特斯拉国产Model Y将涨价](https://so.toutiao.com/search?keyword=特斯拉国产Model+Y将涨价)
+1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
+1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
+1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
+1. [胡塞导弹首次击中以色列领土](https://so.toutiao.com/search?keyword=胡塞导弹首次击中以色列领土)
+1. [网友：梅菜扣肉涉事企业罚4万太少](https://so.toutiao.com/search?keyword=网友：梅菜扣肉涉事企业罚4万太少)
+1. [西湖龙井茶“春分”开采](https://so.toutiao.com/search?keyword=西湖龙井茶“春分”开采)
+1. [腾讯游戏2023年收入1799亿元](https://so.toutiao.com/search?keyword=腾讯游戏2023年收入1799亿元)
+1. [特朗普对“留在北约”提条件](https://so.toutiao.com/search?keyword=特朗普对“留在北约”提条件)
+1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
+1. [女孩喝料酒哭泣 男子送一大包卷纸](https://so.toutiao.com/search?keyword=女孩喝料酒哭泣+男子送一大包卷纸)
+1. [“凑不够钱”的特朗普将面临什么](https://so.toutiao.com/search?keyword=“凑不够钱”的特朗普将面临什么)
+1. [知情人士：小米汽车售价已大幅下调](https://so.toutiao.com/search?keyword=知情人士：小米汽车售价已大幅下调)
+1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
+1. [特朗普再谈俄乌冲突：可以跟普京谈](https://so.toutiao.com/search?keyword=特朗普再谈俄乌冲突：可以跟普京谈)
+1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
+1. [印度海空军为什么要千里奔袭救货轮](https://so.toutiao.com/search?keyword=印度海空军为什么要千里奔袭救货轮)
+1. [60岁老人炒菠菜未焯水致肾病恶化](https://so.toutiao.com/search?keyword=60岁老人炒菠菜未焯水致肾病恶化)
+1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
+1. [印媒称印军对华展示谁是印度洋老大](https://so.toutiao.com/search?keyword=印媒称印军对华展示谁是印度洋老大)
+1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
+1. [女子离婚时提交丈夫出轨照片被起诉](https://so.toutiao.com/search?keyword=女子离婚时提交丈夫出轨照片被起诉)
 1. [2024年高考时间公布](https://so.toutiao.com/search?keyword=2024年高考时间公布)
 1. [日本扇贝出口陷入艰难境地](https://so.toutiao.com/search?keyword=日本扇贝出口陷入艰难境地)
-1. [特斯拉国产Model Y将涨价](https://so.toutiao.com/search?keyword=特斯拉国产Model+Y将涨价)
 1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
 1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
-1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
 1. [山西高速隧道车祸与疲劳驾驶有关吗](https://so.toutiao.com/search?keyword=山西高速隧道车祸与疲劳驾驶有关吗)
-1. [印度海空军为什么要千里奔袭救货轮](https://so.toutiao.com/search?keyword=印度海空军为什么要千里奔袭救货轮)
-1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
 1. [四川达州被遗弃女婴已送还原生家庭](https://so.toutiao.com/search?keyword=四川达州被遗弃女婴已送还原生家庭)
 1. [伊万科维奇首秀会交出怎样的见面礼](https://so.toutiao.com/search?keyword=伊万科维奇首秀会交出怎样的见面礼)
-1. [网友：梅菜扣肉涉事企业罚4万太少](https://so.toutiao.com/search?keyword=网友：梅菜扣肉涉事企业罚4万太少)
 1. [西安交大少年班录取结果出炉](https://so.toutiao.com/search?keyword=西安交大少年班录取结果出炉)
 1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
 1. [拜登对以色列发出“最强烈警告”](https://so.toutiao.com/search?keyword=拜登对以色列发出“最强烈警告”)
 1. [未成年人犯罪 我们的教育缺了什么](https://so.toutiao.com/search?keyword=未成年人犯罪+我们的教育缺了什么)
-1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
 1. [布林肯亚洲行接连在韩菲遭抗议](https://so.toutiao.com/search?keyword=布林肯亚洲行接连在韩菲遭抗议)
 1. [尔滨小伙把东北盒饭开到了扬州](https://so.toutiao.com/search?keyword=尔滨小伙把东北盒饭开到了扬州)
 1. [埃及前总理谈中国为何能实现繁荣](https://so.toutiao.com/search?keyword=埃及前总理谈中国为何能实现繁荣)
-1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
-1. [14个月大的宝宝在厨房内娴熟颠勺](https://so.toutiao.com/search?keyword=14个月大的宝宝在厨房内娴熟颠勺)
 1. [19名中立运动员获巴黎奥运参赛资格](https://so.toutiao.com/search?keyword=19名中立运动员获巴黎奥运参赛资格)
 1. [台陆军四月将在金门海域实弹射击](https://so.toutiao.com/search?keyword=台陆军四月将在金门海域实弹射击)
 1. [蔡英文不敢登太平岛引岛内不满](https://so.toutiao.com/search?keyword=蔡英文不敢登太平岛引岛内不满)
@@ -78,22 +96,16 @@
 1. [王树国谈大学应如何改革](https://so.toutiao.com/search?keyword=王树国谈大学应如何改革)
 1. [卡梅伦发表涉港错误言论 中方回应](https://so.toutiao.com/search?keyword=卡梅伦发表涉港错误言论+中方回应)
 1. [医院：呼北高速车祸伤者多为骨折](https://so.toutiao.com/search?keyword=医院：呼北高速车祸伤者多为骨折)
-1. [特朗普再谈俄乌冲突：可以跟普京谈](https://so.toutiao.com/search?keyword=特朗普再谈俄乌冲突：可以跟普京谈)
-1. [腾讯游戏2023年收入1799亿元](https://so.toutiao.com/search?keyword=腾讯游戏2023年收入1799亿元)
 1. [驻港公署驳卡梅伦：殖民旧梦可休矣](https://so.toutiao.com/search?keyword=驻港公署驳卡梅伦：殖民旧梦可休矣)
 1. [统计局发布2月分年龄组失业率数据](https://so.toutiao.com/search?keyword=统计局发布2月分年龄组失业率数据)
 1. [买早餐后失联的14岁男孩已找到](https://so.toutiao.com/search?keyword=买早餐后失联的14岁男孩已找到)
 1. [小米高管：目前小米汽车没有F码](https://so.toutiao.com/search?keyword=小米高管：目前小米汽车没有F码)
-1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
 1. [大V：国家刺激房地产不会停](https://so.toutiao.com/search?keyword=大V：国家刺激房地产不会停)
-1. [王传福和库克在上海见面](https://so.toutiao.com/search?keyword=王传福和库克在上海见面)
 1. [普京：俄对手所作所为取得反效果](https://so.toutiao.com/search?keyword=普京：俄对手所作所为取得反效果)
 1. [特朗普称“陆克文或被驱逐出美国”](https://so.toutiao.com/search?keyword=特朗普称“陆克文或被驱逐出美国”)
 1. [中国电信：2月移动用户数4.1亿户](https://so.toutiao.com/search?keyword=中国电信：2月移动用户数4.1亿户)
 1. [腾讯2023网络广告业务收入破千亿](https://so.toutiao.com/search?keyword=腾讯2023网络广告业务收入破千亿)
-1. [“凑不够钱”的特朗普将面临什么](https://so.toutiao.com/search?keyword=“凑不够钱”的特朗普将面临什么)
 1. [特朗普：我给自己投了一票](https://so.toutiao.com/search?keyword=特朗普：我给自己投了一票)
-1. [知情人士：小米汽车售价已大幅下调](https://so.toutiao.com/search?keyword=知情人士：小米汽车售价已大幅下调)
 1. [大批参观者涌入英伟达总部](https://so.toutiao.com/search?keyword=大批参观者涌入英伟达总部)
 1. [大学生乳头以下没知觉确诊脊髓病变](https://so.toutiao.com/search?keyword=大学生乳头以下没知觉确诊脊髓病变)
 1. [男生上天台拍高铁 手机从27楼坠落](https://so.toutiao.com/search?keyword=男生上天台拍高铁+手机从27楼坠落)
@@ -101,7 +113,6 @@
 1. [两人凌晨偷狗 徒手抓起暴力摔死](https://so.toutiao.com/search?keyword=两人凌晨偷狗+徒手抓起暴力摔死)
 1. [主持人：未成年真成了犯罪护身符吗](https://so.toutiao.com/search?keyword=主持人：未成年真成了犯罪护身符吗)
 1. [南宁一医院实习生烧炭自杀](https://so.toutiao.com/search?keyword=南宁一医院实习生烧炭自杀)
-1. [女孩喝料酒哭泣 男子送一大包卷纸](https://so.toutiao.com/search?keyword=女孩喝料酒哭泣+男子送一大包卷纸)
 1. [俄称挫败乌军袭击俄境内目标企图](https://so.toutiao.com/search?keyword=俄称挫败乌军袭击俄境内目标企图)
 1. [中纪委7天连打5虎](https://so.toutiao.com/search?keyword=中纪委7天连打5虎)
 1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
